# meta-tags-parser

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/badges/: coverage.json
.github/workflows/: main.yml
benchmark/: __main__.py  _payload.py
meta_tags_parser/: __init__.py  download.py  file_load.py  parse.py  public.py  settings.py  snippets.py  structs.py
scripts/: generate_coverage_badge.py
tests/: _fixtures.py  conftest.py  test_download.py  test_parse.py  test_parse_dynamic.py  test_parse_malformed_html.py  test_parse_settings.py  test_parse_static.py  test_public.py  test_slice_html.py  test_snippets.py  test_structs.py
tests/html_fixtures/: chatgpt-com.html  gazeta-ru.html  github.com  globo-com.html
