[tool.poetry]
name = "meta-tags-parser"
version = "1.0.0"
description = "Fast, modern and strict meta tags parser (og, twitter, title, description, etc)"
authors = ["Denis Anikin <ad@xfenix.ru>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/xfenix/meta-tags-parser/"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "meta_tags_parser" }
]

[tool.poetry.urls]
"Documentation" = "https://github.com/xfenix/meta-tags-parser"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.21.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
Faker = "^11.0.0"
pytest-coverage = "^0.0"
pytest-asyncio = "^0.16.0"
pylint = "^2.12.2"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
lines_after_imports = 2
lexicographical = true
sections = ["FUTURE", "STDLIB", "FIRSTPARTY", "THIRDPARTY", "LOCALFOLDER"]
no_lines_before = ["STDLIB", "THIRDPARTY"]
known_third_party = []
known_local_folder = []

[tool.black]
line-length = 120

[tool.pytest.ini_options]
addopts = "-s --cov=meta_tags_parser --cov=tests --cov-report term-missing"

[tool.pylint.format]
max-line-length=120

[tool.pylint.messages_control]
disable=["logging-fstring-interpolation"]
