[tool.poetry]
name = "meta-tags-parser"
version = "1.3.0"
description = "Fast and modern meta tags parser (og, twitter, title, description, etc) with snippet support"
authors = ["Denis Anikin <ad@xfenix.ru>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/xfenix/meta-tags-parser/"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "meta_tags_parser" }
]

[tool.poetry.urls]
"Documentation" = "https://github.com/xfenix/meta-tags-parser"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
Faker = "*"
pytest-asyncio = "*"
pylint = "*"
mypy = "*"
pytest-xdist = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
lines_after_imports = 2
lexicographical = true
sections = ["FUTURE", "STDLIB", "FIRSTPARTY", "THIRDPARTY", "LOCALFOLDER"]
no_lines_before = ["STDLIB", "THIRDPARTY"]
known_third_party = []
known_local_folder = ["meta_tags_parser"]

[tool.pytest.ini_options]
addopts = "-s --cov=meta_tags_parser --cov=tests --cov-report term-missing"

[tool.pylint.format]
max-line-length=120

[tool.pylint.messages_control]
disable=["logging-fstring-interpolation"]
