[project]
name = "meta-tags-parser"
version = "1.3.0"
description = "Fast and modern meta tags parser (og, twitter, title, description, etc) with snippet support"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Denis Anikin", email = "ad@xfenix.ru" }]
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["httpx>=0.28.1", "selectolax>=0.3.33"]

[project.urls]
Documentation = "https://github.com/xfenix/meta-tags-parser"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "Faker>=37.5.3",
    "pytest-asyncio>=1.1.0",
    "pylint>=3.3.8",
    "mypy>=1.17.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.12.8",
    "hypothesis>=6.138.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-s --cov=meta_tags_parser --cov=tests --cov-report term-missing"

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 120
extend-exclude = ["benchmark"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "EM",
    "FBT",
    "TRY003",
    "D1",
    "D203",
    "D213",
    "G004",
    "FA",
    "COM812",
    "ISC001",
]

[tool.ruff.lint.isort]
no-lines-before = ["standard-library", "local-folder"]
known-third-party = []
known-local-folder = []
lines-after-imports = 2

[tool.ruff.lint.extend-per-file-ignores]
"tests/*.py" = ["S101", "S311"]

[tool.coverage.report]
exclude_also = ["if typing.TYPE_CHECKING:"]
